[Java] Upgrade to Aeron 1.47.0, Agrona 2.0.1 and SBE 1.34.1.