@@ -7,7 +7,7 @@ plugins {
 dependencies {
     checkstyle(libs.checkstyle)
     implementation(libs.agrona)
-    implementation(libs.aeron)
+    implementation(libs.aeron.archive)
     implementation(libs.slf4j)
     implementation(libs.logback)
     testImplementation(libs.bundles.testing)
@@ -20,6 +20,16 @@ testing {
         val test by getting(JvmTestSuite::class) {
             // Use JUnit Jupiter test framework
             useJUnitJupiter(libs.versions.junitVersion.get())
+
+            targets {
+                all {
+                    testTask {
+                        jvmArgs(
+                            "--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED",
+                            "--add-opens", "java.base/java.util.zip=ALL-UNNAMED")
+                    }
+                }
+            }
         }
     }
 }
