@@ -27,7 +27,7 @@ dependencies {
     "codecGeneration"(libs.sbe)
     checkstyle(libs.checkstyle)
     implementation(libs.agrona)
-    implementation(libs.aeron)
+    implementation(libs.aeron.samples)
     implementation(libs.slf4j)
     implementation(libs.logback)
     implementation(libs.picocli)
@@ -54,6 +54,16 @@ testing {
         val test by getting(JvmTestSuite::class) {
             // Use JUnit Jupiter test framework
             useJUnitJupiter(libs.versions.junitVersion.get())
+
+            targets {
+                all {
+                    testTask {
+                        jvmArgs(
+                            "--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED",
+                            "--add-opens", "java.base/java.util.zip=ALL-UNNAMED")
+                    }
+                }
+            }
         }
     }
 }
@@ -82,6 +92,7 @@ tasks {
         inputs.files(codecsFile, sbeFile)
         outputs.dir(generatedDir)
         classpath = codecGeneration
+        jvmArgs("--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED")
         mainClass.set("uk.co.real_logic.sbe.SbeTool")
         args = listOf(codecsFile)
         systemProperties["sbe.output.dir"] = generatedDir
