@@ -1,2 +1,2 @@
 #!/bin/bash
-java -jar admin-uber.jar
+java --add-opens java.base/jdk.internal.misc=ALL-UNNAMED --add-opens java.base/java.util.zip=ALL-UNNAMED -jar admin-uber.jar
