@@ -1,3 +1,3 @@
 #!/bin/sh
 clusterdir=$(ls -d */ | cut -f1 -d'/' | grep aeron-cluster | head -1)
-java -cp ~/aeron/aeron-all-*.jar io.aeron.cluster.ClusterTool ~/jar/$clusterdir/cluster describe
+java --add-opens java.base/jdk.internal.misc=ALL-UNNAMED --add-opens java.base/java.util.zip=ALL-UNNAMED -cp ~/aeron/aeron-all-*.jar io.aeron.cluster.ClusterTool ~/jar/$clusterdir/cluster describe
